Code sample fix
Fix for CQDOC-17769